<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gymSlots">

    <ImageView
        android:id="@+id/gymPic"
        android:layout_width="413dp"
        android:layout_height="187dp"
        android:layout_marginTop="4dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/lyon_gym" />

    <TextView
        android:id="@+id/gymTitle"
        android:layout_width="413dp"
        android:layout_height="71dp"
        android:background="#513B3F41"
        android:text="Lyon Gym"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#F8F5F5"
        android:textSize="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/gymPic"
        app:layout_constraintEnd_toEndOf="@+id/gymPic"
        app:layout_constraintStart_toStartOf="@+id/gymPic"
        app:layout_constraintTop_toTopOf="@+id/gymPic" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="404dp"
        android:layout_height="445dp"
        android:layout_marginBottom="39dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#A12101"
            android:gravity="center"
            android:text="Reservations"
            android:textColor="#FFFFFF"
            android:textSize="40dp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="42dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/selectDay"
                android:layout_width="217dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Select Day:"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="175dp"
                android:layout_height="42dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/timeText"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:text="8:00-10:00am"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/capText8"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:gravity="center"
                    android:text="Capacity:"
                    android:textSize="13dp" />
            </LinearLayout>

            <Button
                android:id="@+id/reserve8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:scaleX="0.7"
                android:scaleY=".7"
                android:text="Reserve" />

            <Button
                android:id="@+id/remind8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:text="Remind Me" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/timeText2"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:gravity="center"
                    android:text="10:00-12:00pm"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/capText10"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:gravity="center"
                    android:text="Capacity:"
                    android:textSize="13dp" />
            </LinearLayout>

            <Button
                android:id="@+id/reserve10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:scaleX="0.7"
                android:scaleY=".7"
                android:text="Reserve" />

            <Button
                android:id="@+id/remind10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:text="Remind Me" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/timeText3"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:gravity="center"
                    android:text="12:00-2:00pm"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/capText12"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:gravity="center"
                    android:text="Capacity:"
                    android:textSize="13dp" />
            </LinearLayout>

            <Button
                android:id="@+id/reserve12"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:scaleX="0.7"
                android:scaleY=".7"
                android:text="Reserve" />

            <Button
                android:id="@+id/remind12"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:text="Remind Me" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/timeText4"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:gravity="center"
                    android:text="2:00-4:00pm"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/capText2"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:gravity="center"
                    android:text="Capacity:"
                    android:textSize="13dp" />
            </LinearLayout>

            <Button
                android:id="@+id/reserve2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:scaleX="0.7"
                android:scaleY=".7"
                android:text="Reserve" />

            <Button
                android:id="@+id/remind2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:text="Remind Me" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/timeText5"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:gravity="center"
                    android:text="4:00-6:00pm"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/capText4"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:gravity="center"
                    android:text="Capacity:"
                    android:textSize="13dp" />
            </LinearLayout>

            <Button
                android:id="@+id/reserve4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:scaleX="0.7"
                android:scaleY=".7"
                android:text="Reserve" />

            <Button
                android:id="@+id/remind4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:text="Remind Me" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNav"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E8E7E7"
            app:menu="@menu/bottom_nav_menu" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
